--- a/project2/static/assets/css/custom.css
+++ b/project2/static/assets/css/custom.css
@@ -8,7 +8,12 @@ body {
 	background-color: #FFEC00;
   }
 
-.navbar-dark .navbar-brand {
+.bg-dark .navbar-brand {
+	background-color: #102A83;
+	color: #FFEC00;
+}
+
+.navbar-custom {
 	background-color: #102A83;
 	color: #FFEC00;
 }
@@ -17,3 +22,19 @@ body {
 	background-color: #102A83;
 	color: #FFEC00;
 }
+
+.column {
+	float: left;
+	width: 50%;
+	padding: 10px;
+  }
+
+.custom-toggler { 
+	border-color: #FFEC00; 
+} 
+/* Setting the stroke to green using rgb values (0, 128, 0) */ 
+  
+.custom-toggler-icon { 
+	background-image: url( 
+"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 236, 0, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
+} 
